Sponsor scrollbar is only fixed if the browser height is at least 900px, to help prevent sponsors from disappearing off the bottom.

--- a/sass/style-2012.scss
+++ b/sass/style-2012.scss
@@ -129,7 +129,7 @@ $main-content-padding-top: $navbarHeight + 40px;
 
   $sponsor-sidebar-width: ($gridColumnWidth + $gridGutterWidth) * 3;
 
-  @media (min-width: 960px) {
+  @media (min-width: 960px) and (min-height: 900px) {
     #sponsors-sidebar {
       position: fixed;
       left: 20px;
